Fin de sección 16

--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -31,7 +31,12 @@
 
     <span class="spacer"></span>
 
-    <button mat-button>
+    <span> {{ user?.email }} </span>
+
+    <button
+      mat-button
+      (click)="onLogOut()"
+      >
       Logout
     </button>
 
